Co-authored-by: cristianyelpo <cristianyelpo@users.noreply.github.com> Co-authored-by: igdac96 <Igdac96@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -145,9 +145,10 @@
 
               <img class="bd-placeholder-img card-img-top" src="img/toys_index.jpg"
 
-                alt="Imgagen representativa de la categoría 'Juguetes'">
-
-              <h3 class="m-3">Juguetes</h3>
+                alt="Imagen representativa de la categoría 'Juguetes'">
+             </img>
+                
+                <h3 class="m-3">Juguetes</h3>
 
               <div class="card-body">
 
