--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
   -->
 </head>
 
-<body id="fondologin">
+<body id="fondoDeLogin">
   <main class="mt-5">
     <div class="container" class="ing_cont">
       
